0.11.0 (2015-??-??)

Backwards Incompatibilities
---------------------------

Features
--------

Bug Handling
------------


0.10.0 (2015-??-??)
===================

Backwards Incompatibilities
---------------------------

* Major overhaul of filter and output plugin APIs to support disk buffering
  (#1378).

* Go 1.4 now required for building.

* Deprecated the read_next_field() sandbox API; it is targeted for removal in
  0.11.0 (#1602).

* Removed unused PipelinePack.Decoded attribute.

* LogOutput will write data to stdout instead of stderr (#1515).

* Using stftime literals for filenames during rotation in FileOutput plugin
  (#1469).

* Implemented stftime format codes in: filenames in FileOutput plugin,
  ESJsonEncoder, ESLogstashV0Encoder, Payload encoder (#1469, #1508).

* The package created by 'make deb' creates an "heka" user and ships an init
  script and a systemd unit.

* The 'make deb' target requires fakeroot and debhelper to be installed.

* SplitterRunner interface now provides a `Done` method that should be called
  whenever the splitter is no longer needed.

* `"Fields"` choice for the `fields` setting renamed to `"DynamicFields"` for
  both ESJsonEncoder and ESLogstashV0Encoder.

Features
--------

* Added support for `write_message` to delete fields when passed nil values.

* Added a timer_event_on_shutdown configuration option for Filter/Output
  sandboxes (#1460).

* Added `replace_dot` setting to StatFilter.

* A protobuf encoding of the current message is now always stored in
  pack.MsgBytes prior to injection into the message router (#265).

* ProtobufEncoder now just copies the pack.MsgBytes into a new byte slice and
  returns that.

* Added Linux CPU Stats Decoder and CPU Stats Filter.

* Centralized common functions used by the Schema Carbon Line Encoder and
  Schema InfluxDB Line Encoder into new ts_line_protocol and field_util modules.

* Added a new sandbox encoder, Schema Carbon Line Encoder, which provides