@@ -1,0 +1,6 @@
+local M = {}
+setfenv(1, M) -- Remove external access to contain everything in the module.
+
+version = "1.0.0"
+
+return M
