@@ -6,6 +6,8 @@ Backwards Incompatibilities
 Features
 --------
 
+* Allow multiple sandbox module directories to be specified (#1525).
+
 Bug Handling
 ------------
 
